Use lock icon to show when shifts are locked (plus a ninja fix to display an error popup when user attempt to lock a spot to an employee which has no shift in the timeslot)

--- a/optashift-employee-rostering-gwtui/src/main/resources/org/optaplanner/openshift/employeerostering/gwtui/client/resources/css/calendar.css
+++ b/optashift-employee-rostering-gwtui/src/main/resources/org/optaplanner/openshift/employeerostering/gwtui/client/resources/css/calendar.css
@@ -1,6 +1,11 @@
-:root {
-  --first-color: #488cff;
-  --second-color: #ffff8c;
+@font-face {
+    font-family: 'glyphicon';
+    src: url('glyphicons-halflings-regular.eot'); /* IE9 Compat Modes */
+    src: url('glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+        url('glyphicons-halflings-regular.woff2') format('woff2'), /* Super Modern Browsers */
+        url('glyphicons-halflings-regular.woff') format('woff'), /* Pretty Modern Browsers */
+        url('glyphicons-halflings-regular.ttf')  format('truetype'), /* Safari, Android, iOS */
+        url('glyphicons-halflings-regular.svg#svgFontName') format('svg'); /* Legacy iOS */
 }
 
 .main{
